# libinspire

./: .appveyor.yml  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
src/: lib.rs
